--- a/Deployment-service.yaml
+++ b/Deployment-service.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: boardgame-deployment
+  name: Mission-deployment
 spec:
   selector:
     matchLabels:
-      app: boardgame
+      app: Mission
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: boardgame
+        app: Mission
     spec:
       containers:
-        - name: boardgame
-          image: adijaiswal/boardshack:latest # Image that will be used to containers in the cluster
+        - name: Mission
+          image: partake93/Mission:latest # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
@@ -25,10 +25,10 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: boardgame-ssvc
+  name: Mission-ssvc
 spec:
   selector:
-    app: boardgame
+    app: Mission
   ports:
     - protocol: "TCP"
       port: 80
